--- a/bulbasor.html
+++ b/bulbasor.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bulbasaur</title>
 </head>
 <body>
-    <h1>Bulbasaur</h1>
+    
+    <div class="container">
+       <h1 class="text-center">Bulbasaur</h1>
+       <small>N.001</small>
+       <div class="row">
+           <div class="col-sm-6 col-md-4 col-lg-3">
+               <div class="text-center">
+                <img class="img-thumbnail bg-light" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" alt="">
+               </div>
+
+
+
+           </div>
+
+       </div>
+
+    </div>
 </body>
 </html>
