--- a/charmande.html
+++ b/charmande.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bulbasaur</title>
-</head>
 <body>
     
     <div class="container">
-       <h1 class="text-center">Bulbasaur</h1>
+       <h1 class="text-center">Charmander</h1>
        <small>N.001</small>
        <div class="row">
            <div class="col-sm-6 col-md-4 col-lg-3">
@@ -18,7 +10,7 @@
                     <p>Este Pokémon nace con una semilla en el lomo, que brota con el paso del tiempo.</p>
                    </div>
                    
-                <img class="img-thumbnail bg-light" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" alt="">
+                <img class="img-thumbnail bg-light" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png" alt="">
                </div>
 
 
