--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </a>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
-                <a href="bulbasor.html">
+                <a href="ivysaur.html">
                 <div class="text-center">
                     <img class="img-thumbnail bg-light" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/002.png" alt="">
                      </div>
@@ -69,7 +69,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <a href="bulbasor.html">
+                    <a href="venusaur.html">
             <div class="text-center">
                 <img class="img-thumbnail bg-light" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/003.png" alt="">
                  </div>
@@ -87,7 +87,7 @@
                 </a>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
-                <a href="bulbasor.html">
+                <a href="charmande.html">
                 <div class="text-center">
                     <img class="img-thumbnail bg-light " src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png" alt="">
                      </div>
