se agrgo nuevo commit

--- a/bulbasor.html
+++ b/bulbasor.html
@@ -9,8 +9,12 @@
 <body>
     
     <div class="container">
-       <h1 class="text-center">Bulbasaur</h1>
-       <small>N.001</small>
+        <center>
+       <h1 >Bulbasaur
+           <Font color="gray">N.001</Font>
+       </h1>
+    </center>
+       
        <div class="row">
            <div class="col-sm-6 col-md-4 col-lg-3">
                <div class="text-center">
