--- a/ivysaur.html
+++ b/ivysaur.html
@@ -1,9 +1,9 @@
 <body>
     
     <div class="container">
-       <h1 class="text-center">Ivynasaur</h1>
+       <h1 class="text-center">Ivysaur</h1>
        <small>N.001</small>
-       <div class="row">
+       <div class="row1">
            <div class="col-sm-6 col-md-4 col-lg-3">
                <div class="text-center">
                    <div class="col-sm-6 col-md-4 col-lg-3 text-right">
